--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "apollo-client": "^2.6.3",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
-    "final-form": "^4.18.2",
-    "firebase": "^6.3.4",
+    "final-form": "^4.18.4",
+    "firebase": "^6.3.5",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
@@ -40,11 +40,11 @@
     "luxon": "^1.17.2",
     "moment": "^2.24.0",
     "polished": "^3.4.1",
-    "react": "^16.8.6",
+    "react": "16.8.6",
     "react-apollo": "^3.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dates": "18.3.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "16.8.6",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
     "react-grid-layout": "^0.16.6",
@@ -56,7 +56,7 @@
     "react-select": "^3.0.4",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.3.2",
-    "recharts": "^1.6.2",
+    "recharts": "^1.7.1",
     "screenfull": "^4.2.1",
     "styled-components": "^4.3.2",
     "use-react-router": "^1.0.7"
@@ -73,8 +73,8 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.136",
     "@types/luxon": "^1.15.2",
-    "@types/node": "12.6.9",
-    "@types/react": "^16.8.24",
+    "@types/node": "12.7.1",
+    "@types/react": "^16.9.1",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dates": "^17.1.5",
     "@types/react-dom": "16.8.5",
@@ -93,15 +93,15 @@
     "@types/styled-components": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "apollo": "2.17.1",
+    "apollo": "2.17.2",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest-junit": "^7.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.1.0",
     "source-map-explorer": "^2.0.1",
     "typescript": "3.5.3"
   },
