--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
-    "@rehooks/component-size": "^1.0.3",
     "@types/react-loadable": "^5.5.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
@@ -31,13 +30,13 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "final-form": "^4.18.5",
-    "firebase": "^6.6.1",
-    "graphql": "^14.5.6",
+    "firebase": "^6.6.2",
+    "graphql": "^14.5.7",
     "graphql-tag": "^2.10.1",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.18.0",
+    "luxon": "^1.19.0",
     "moment": "^2.24.0",
     "polished": "^3.4.1",
     "react": "16.9.0",
@@ -54,8 +53,8 @@
     "react-router-dom": "^5.0.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.3.2",
+    "react-use": "^12.2.0",
     "recharts": "^1.7.1",
-    "screenfull": "^5.0.0",
     "simple-statistics": "^7.0.5",
     "styled-components": "^4.3.2",
     "use-react-router": "^1.0.7"
