--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
+    "react-router-ga": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.0",
     "react-use": "^12.2.3",
