--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
+    "@types/graphql-type-json": "^0.3.2",
     "@types/react-loadable": "^5.5.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
@@ -29,10 +30,14 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-schema": "^1.2.4",
     "final-form": "^4.18.5",
     "firebase": "^7.1.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.5",
+    "graphql-type-json": "^0.3.0",
+    "graphql.macro": "^1.4.2",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
@@ -61,17 +66,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@storybook/addon-info": "^5.2.1",
-    "@storybook/addon-knobs": "^5.2.1",
-    "@storybook/addon-viewport": "^5.2.1",
-    "@storybook/addons": "^5.2.1",
-    "@storybook/react": "^5.2.1",
-    "@storybook/theming": "^5.2.1",
+    "@storybook/addon-info": "^5.2.3",
+    "@storybook/addon-knobs": "^5.2.3",
+    "@storybook/addon-viewport": "^5.2.3",
+    "@storybook/addons": "^5.2.3",
+    "@storybook/react": "^5.2.3",
+    "@storybook/theming": "^5.2.3",
     "@types/firebase": "^3.2.1",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.141",
     "@types/luxon": "^1.15.2",
-    "@types/node": "12.7.11",
+    "@types/node": "12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dates": "^17.1.5",
@@ -83,14 +88,11 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/recharts": "^1.1.21",
     "@types/screenfull": "^4.1.0",
-    "@types/storybook__addon-actions": "^3.4.3",
-    "@types/storybook__addon-knobs": "^5.0.4",
-    "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.19",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
-    "apollo": "2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
+    "apollo": "^2.19.0",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -98,7 +100,7 @@
     "jest-junit": "^8.0.0",
     "react-scripts": "^3.2.0",
     "source-map-explorer": "^2.1.0",
-    "typescript": "3.6.3"
+    "typescript": "^3.6.3"
   },
   "browserslist": {
     "production": [
