--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "graphql.macro": "^1.4.2",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
     "luxon": "^1.19.3",
     "moment": "^2.24.0",
     "polished": "^3.4.1",
@@ -75,7 +75,7 @@
     "@storybook/theming": "^5.2.3",
     "@types/firebase": "^3.2.1",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.141",
+    "@types/lodash-es": "^4.17.3",
     "@types/luxon": "^1.15.2",
     "@types/node": "12.7.12",
     "@types/react": "^16.9.5",
