--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@typescript-eslint/parser": "^2.3.3",
     "apollo": "^2.19.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
