--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "@loadable/component": "^5.10.3",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
     "@types/graphql-type-json": "^0.3.2",
-    "@types/react-loadable": "^5.5.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-cache-persist": "^0.1.1",
@@ -47,19 +47,18 @@
     "react": "16.10.2",
     "react-apollo": "^3.1.2",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dates": "^21.2.0",
+    "react-dates": "^21.2.1",
     "react-dom": "16.10.2",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
     "react-infinite-scroller": "^1.2.4",
-    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
     "react-router-ga": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.0",
-    "react-use": "^12.2.3",
+    "react-use": "^12.4.0",
     "recharts": "^1.7.1",
     "simple-statistics": "^7.0.5",
     "styled-components": "^4.4.0",
@@ -75,6 +74,7 @@
     "@storybook/theming": "^5.2.3",
     "@types/firebase": "^3.2.1",
     "@types/jwt-decode": "^2.2.1",
+    "@types/loadable__component": "^5.10.0",
     "@types/lodash-es": "^4.17.3",
     "@types/luxon": "^1.15.2",
     "@types/node": "12.7.12",
