--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
+    "@sentry/browser": "^5.7.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-cache-persist": "^0.1.1",
@@ -57,20 +58,20 @@
     "react-router-ga": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.0",
-    "react-use": "^12.4.0",
-    "recharts": "^1.7.1",
+    "react-use": "^12.5.0",
+    "recharts": "^1.8.0",
     "simple-statistics": "^7.0.5",
     "styled-components": "^4.4.0",
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@storybook/addon-info": "^5.2.3",
-    "@storybook/addon-knobs": "^5.2.3",
-    "@storybook/addon-viewport": "^5.2.3",
-    "@storybook/addons": "^5.2.3",
-    "@storybook/react": "^5.2.3",
-    "@storybook/theming": "^5.2.3",
+    "@storybook/addon-info": "^5.2.4",
+    "@storybook/addon-knobs": "^5.2.4",
+    "@storybook/addon-viewport": "^5.2.4",
+    "@storybook/addons": "^5.2.4",
+    "@storybook/react": "^5.2.4",
+    "@storybook/theming": "^5.2.4",
     "@types/firebase": "^3.2.1",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jwt-decode": "^2.2.1",
@@ -78,10 +79,10 @@
     "@types/lodash-es": "^4.17.3",
     "@types/luxon": "^1.15.2",
     "@types/node": "12.7.12",
-    "@types/react": "^16.9.5",
+    "@types/react": "^16.9.7",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dates": "^17.1.5",
-    "@types/react-dom": "16.9.1",
+    "@types/react-dom": "16.9.2",
     "@types/react-grid-layout": "^0.16.7",
     "@types/react-helmet": "^5.0.11",
     "@types/react-infinite-scroller": "^1.2.1",
@@ -91,8 +92,8 @@
     "@types/screenfull": "^4.1.0",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.19",
-    "@typescript-eslint/eslint-plugin": "^2.3.3",
-    "@typescript-eslint/parser": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
     "apollo": "^2.19.0",
     "babel-loader": "^8.0.6",
     "eslint": "^6.5.1",
