--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@loadable/component": "^5.10.3",
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.5.0",
-    "@sentry/browser": "^5.7.1",
+    "@material-ui/styles": "^4.6.0",
+    "@sentry/browser": "^5.9.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-cache-persist": "^0.1.1",
@@ -31,79 +31,83 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-link-schema": "^1.2.4",
-    "final-form": "^4.18.5",
-    "firebase": "^7.2.1",
+    "final-form": "^4.18.6",
+    "firebase": "^7.4.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.6",
-    "graphql-type-json": "^0.3.0",
+    "graphql-type-json": "^0.3.1",
     "graphql.macro": "^1.4.2",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "lodash-es": "^4.17.15",
-    "luxon": "^1.19.3",
+    "luxon": "^1.21.2",
     "moment": "^2.24.0",
-    "polished": "^3.4.1",
-    "react": "16.11.0",
+    "polished": "^3.4.2",
+    "react": "16.12.0",
     "react-apollo": "^3.1.3",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dates": "^21.3.1",
-    "react-dom": "16.11.0",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dates": "^21.5.0",
+    "react-dom": "16.12.0",
     "react-feather": "^2.0.3",
-    "react-final-form": "^6.3.0",
-    "react-grid-layout": "^0.17.0",
+    "react-final-form": "^6.3.3",
+    "react-grid-layout": "^0.17.1",
     "react-helmet": "^5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
     "react-router-ga": "^1.2.2",
     "react-spring": "^8.0.27",
-    "react-toastify": "^5.4.0",
-    "react-use": "^12.7.2",
+    "react-toastify": "^5.4.1",
+    "react-use": "^13.8.0",
     "recharts": "^1.8.5",
-    "simple-statistics": "^7.0.5",
-    "styled-components": "^4.4.0",
+    "simple-statistics": "^7.0.7",
+    "styled-components": "^4.4.1",
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@storybook/addon-info": "^5.2.5",
-    "@storybook/addon-knobs": "^5.2.5",
-    "@storybook/addon-viewport": "^5.2.5",
-    "@storybook/addons": "^5.2.5",
-    "@storybook/react": "^5.2.5",
-    "@storybook/theming": "^5.2.5",
+    "@babel/core": "^7.7.2",
+    "@storybook/addon-info": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-viewport": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "@storybook/react": "^5.2.6",
+    "@storybook/theming": "^5.2.6",
     "@types/firebase": "^3.2.1",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash-es": "^4.17.3",
-    "@types/luxon": "^1.15.2",
-    "@types/node": "12.11.7",
-    "@types/react": "^16.9.10",
+    "@types/luxon": "^1.21.0",
+    "@types/node": "12.12.11",
+    "@types/react": "^16.9.11",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dates": "^17.1.5",
-    "@types/react-dom": "16.9.2",
+    "@types/react-dom": "16.9.4",
     "@types/react-grid-layout": "^0.16.7",
-    "@types/react-helmet": "^5.0.13",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-modal": "^3.10.0",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/recharts": "^1.8.0",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/recharts": "^1.8.3",
     "@types/screenfull": "^4.1.0",
     "@types/storybook__react": "^4.0.2",
-    "@types/styled-components": "^4.1.19",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
-    "apollo": "^2.21.0",
+    "@types/styled-components": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
+    "apollo": "^2.21.1",
     "babel-loader": "^8.0.6",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "18.0.1",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest-junit": "^9.0.0",
     "react-scripts": "^3.2.0",
-    "source-map-explorer": "^2.1.0",
-    "typescript": "^3.6.3"
+    "source-map-explorer": "^2.1.1",
+    "typescript": "^3.7.2"
   },
   "browserslist": {
     "production": [
